--- a/exercise/PythonStrings.ipynb
+++ b/exercise/PythonStrings.ipynb
@@ -9,8 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:12.907106Z",
+     "start_time": "2024-05-14T06:50:12.902800Z"
+    }
+   },
+   "source": [
+    "print(\"Hello\")\n",
+    "print('Hello')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -21,15 +29,21 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Hello\")\n",
-    "print('Hello')"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:13.276358Z",
+     "start_time": "2024-05-14T06:50:13.271516Z"
+    }
+   },
+   "source": [
+    "print(\"It's alright\")\n",
+    "print(\"He is called 'Johnny'\")\n",
+    "print('He is called \"Johnny\"')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -41,16 +55,20 @@
      ]
     }
    ],
-   "source": [
-    "print(\"It's alright\")\n",
-    "print(\"He is called 'Johnny'\")\n",
-    "print('He is called \"Johnny\"')"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:13.380317Z",
+     "start_time": "2024-05-14T06:50:13.308608Z"
+    }
+   },
+   "source": [
+    "a = \"Hello\"\n",
+    "print(a)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -60,39 +78,23 @@
      ]
     }
    ],
-   "source": [
-    "a = \"Hello\"\n",
-    "print(a)"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lorem ipsum dolor sit amet,\n",
-      "consectetur adipiscing elit,\n",
-      "sed do eiusmod tempor incididunt\n",
-      "ut labore et dolore magna aliqua.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:13.671764Z",
+     "start_time": "2024-05-14T06:50:13.660313Z"
     }
-   ],
+   },
    "source": [
     "a = \"\"\"Lorem ipsum dolor sit amet,\n",
     "consectetur adipiscing elit,\n",
     "sed do eiusmod tempor incididunt\n",
     "ut labore et dolore magna aliqua.\"\"\"\n",
     "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -105,18 +107,49 @@
      ]
     }
    ],
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:13.834076Z",
+     "start_time": "2024-05-14T06:50:13.766680Z"
+    }
+   },
    "source": [
     "a = '''Lorem ipsum dolor sit amet,\n",
     "consectetur adipiscing elit,\n",
     "sed do eiusmod tempor incididunt\n",
     "ut labore et dolore magna aliqua.'''\n",
     "print(a)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lorem ipsum dolor sit amet,\n",
+      "consectetur adipiscing elit,\n",
+      "sed do eiusmod tempor incididunt\n",
+      "ut labore et dolore magna aliqua.\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:14.112958Z",
+     "start_time": "2024-05-14T06:50:14.102647Z"
+    }
+   },
+   "source": [
+    "a = \"Hello, World!\"\n",
+    "print(a[1])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -126,15 +159,19 @@
      ]
     }
    ],
-   "source": [
-    "a = \"Hello, World!\"\n",
-    "print(a[1])"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:14.486711Z",
+     "start_time": "2024-05-14T06:50:14.477435Z"
+    }
+   },
+   "source": [
+    "print(a[0])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -144,14 +181,20 @@
      ]
     }
    ],
-   "source": [
-    "print(a[0])"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:14.614930Z",
+     "start_time": "2024-05-14T06:50:14.609019Z"
+    }
+   },
+   "source": [
+    "for x in \"banana\":\n",
+    "  print(x)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -166,15 +209,20 @@
      ]
     }
    ],
-   "source": [
-    "for x in \"banana\":\n",
-    "  print(x)"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:14.954329Z",
+     "start_time": "2024-05-14T06:50:14.944597Z"
+    }
+   },
+   "source": [
+    "for x in \"12345\":\n",
+    "  print(x)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -188,15 +236,20 @@
      ]
     }
    ],
-   "source": [
-    "for x in \"12345\":\n",
-    "  print(x)"
-   ]
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:15.117134Z",
+     "start_time": "2024-05-14T06:50:15.113203Z"
+    }
+   },
+   "source": [
+    "a = \"Hello, World!\"\n",
+    "print(len(a))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -206,24 +259,33 @@
      ]
     }
    ],
-   "source": [
-    "a = \"Hello, World!\"\n",
-    "print(len(a))"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:15.162558Z",
+     "start_time": "2024-05-14T06:50:15.158882Z"
+    }
+   },
    "source": [
     "a = '12345'"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:15.418654Z",
+     "start_time": "2024-05-14T06:50:15.410873Z"
+    }
+   },
+   "source": [
+    "print(len(a))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -233,14 +295,20 @@
      ]
     }
    ],
-   "source": [
-    "print(len(a))"
-   ]
+   "execution_count": 13
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:15.519438Z",
+     "start_time": "2024-05-14T06:50:15.514197Z"
+    }
+   },
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "print(\"free\" in txt)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -250,15 +318,21 @@
      ]
     }
    ],
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "print(\"free\" in txt)"
-   ]
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:15.773753Z",
+     "start_time": "2024-05-14T06:50:15.768302Z"
+    }
+   },
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "if \"free\" in txt:\n",
+    "  print(\"Yes, 'free' is present.\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -268,16 +342,20 @@
      ]
     }
    ],
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "if \"free\" in txt:\n",
-    "  print(\"Yes, 'free' is present.\")"
-   ]
+   "execution_count": 15
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:16.237067Z",
+     "start_time": "2024-05-14T06:50:16.228602Z"
+    }
+   },
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "print(\"expensive\" not in txt)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -287,15 +365,21 @@
      ]
     }
    ],
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "print(\"expensive\" not in txt)"
-   ]
+   "execution_count": 16
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:16.927057Z",
+     "start_time": "2024-05-14T06:50:16.921531Z"
+    }
+   },
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "if \"expensive\" not in txt:\n",
+    "  print(\"No, 'expensive' is NOT present.\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -305,11 +389,7 @@
      ]
     }
    ],
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "if \"expensive\" not in txt:\n",
-    "  print(\"No, 'expensive' is NOT present.\")"
-   ]
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -320,8 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:17.295856Z",
+     "start_time": "2024-05-14T06:50:17.289398Z"
+    }
+   },
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[2:5])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -331,15 +419,19 @@
      ]
     }
    ],
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[2:5])"
-   ]
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:17.864172Z",
+     "start_time": "2024-05-14T06:50:17.858163Z"
+    }
+   },
+   "source": [
+    "print(b[2:3])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -349,14 +441,20 @@
      ]
     }
    ],
-   "source": [
-    "print(b[2:3])"
-   ]
+   "execution_count": 19
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:18.160008Z",
+     "start_time": "2024-05-14T06:50:18.152733Z"
+    }
+   },
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[:5])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -366,15 +464,19 @@
      ]
     }
    ],
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[:5])"
-   ]
+   "execution_count": 20
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:18.224258Z",
+     "start_time": "2024-05-14T06:50:18.218575Z"
+    }
+   },
+   "source": [
+    "print(b[5:])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -384,14 +486,20 @@
      ]
     }
    ],
-   "source": [
-    "print(b[5:])"
-   ]
+   "execution_count": 21
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:18.304262Z",
+     "start_time": "2024-05-14T06:50:18.292542Z"
+    }
+   },
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[2:])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -401,15 +509,20 @@
      ]
     }
    ],
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[2:])"
-   ]
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:18.323344Z",
+     "start_time": "2024-05-14T06:50:18.308281Z"
+    }
+   },
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[-5:-2])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -419,15 +532,19 @@
      ]
     }
    ],
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[-5:-2])"
-   ]
+   "execution_count": 23
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:18.347300Z",
+     "start_time": "2024-05-14T06:50:18.327428Z"
+    }
+   },
+   "source": [
+    "print(b[-3:-1])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -437,14 +554,20 @@
      ]
     }
    ],
-   "source": [
-    "print(b[-3:-1])"
-   ]
+   "execution_count": 24
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T06:50:18.397581Z",
+     "start_time": "2024-05-14T06:50:18.388717Z"
+    }
+   },
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[-5:-2])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -454,10 +577,7 @@
      ]
     }
    ],
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[-5:-2])"
-   ]
+   "execution_count": 25
   }
  ],
  "metadata": {
