--- a/exercise/PythonStrings.ipynb
+++ b/exercise/PythonStrings.ipynb
@@ -9,16 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:12.907106Z",
      "start_time": "2024-05-14T06:50:12.902800Z"
     }
    },
-   "source": [
-    "print(\"Hello\")\n",
-    "print('Hello')"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -29,21 +26,20 @@
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "print(\"Hello\")\n",
+    "print('Hello')"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:13.276358Z",
      "start_time": "2024-05-14T06:50:13.271516Z"
     }
    },
-   "source": [
-    "print(\"It's alright\")\n",
-    "print(\"He is called 'Johnny'\")\n",
-    "print('He is called \"Johnny\"')"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -55,20 +51,21 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "print(\"It's alright\")\n",
+    "print(\"He is called 'Johnny'\")\n",
+    "print('He is called \"Johnny\"')"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:13.380317Z",
      "start_time": "2024-05-14T06:50:13.308608Z"
     }
    },
-   "source": [
-    "a = \"Hello\"\n",
-    "print(a)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -78,52 +75,49 @@
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "a = \"Hello\"\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:13.671764Z",
      "start_time": "2024-05-14T06:50:13.660313Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lorem ipsum dolor sit amet,\n",
+      "consectetur adipiscing elit,\n",
+      "sed do eiusmod tempor incididunt\n",
+      "ut labore et dolore magna aliqua.\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"\"\"Lorem ipsum dolor sit amet,\n",
     "consectetur adipiscing elit,\n",
     "sed do eiusmod tempor incididunt\n",
     "ut labore et dolore magna aliqua.\"\"\"\n",
     "print(a)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lorem ipsum dolor sit amet,\n",
-      "consectetur adipiscing elit,\n",
-      "sed do eiusmod tempor incididunt\n",
-      "ut labore et dolore magna aliqua.\n"
-     ]
-    }
-   ],
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:13.834076Z",
      "start_time": "2024-05-14T06:50:13.766680Z"
     }
    },
-   "source": [
-    "a = '''Lorem ipsum dolor sit amet,\n",
-    "consectetur adipiscing elit,\n",
-    "sed do eiusmod tempor incididunt\n",
-    "ut labore et dolore magna aliqua.'''\n",
-    "print(a)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -136,20 +130,23 @@
      ]
     }
    ],
-   "execution_count": 6
+   "source": [
+    "a = '''Lorem ipsum dolor sit amet,\n",
+    "consectetur adipiscing elit,\n",
+    "sed do eiusmod tempor incididunt\n",
+    "ut labore et dolore magna aliqua.'''\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:14.112958Z",
      "start_time": "2024-05-14T06:50:14.102647Z"
     }
    },
-   "source": [
-    "a = \"Hello, World!\"\n",
-    "print(a[1])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -159,19 +156,20 @@
      ]
     }
    ],
-   "execution_count": 7
+   "source": [
+    "a = \"Hello, World!\"\n",
+    "print(a[1])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:14.486711Z",
      "start_time": "2024-05-14T06:50:14.477435Z"
     }
    },
-   "source": [
-    "print(a[0])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -181,20 +179,19 @@
      ]
     }
    ],
-   "execution_count": 8
+   "source": [
+    "print(a[0])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:14.614930Z",
      "start_time": "2024-05-14T06:50:14.609019Z"
     }
    },
-   "source": [
-    "for x in \"banana\":\n",
-    "  print(x)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -209,20 +206,20 @@
      ]
     }
    ],
-   "execution_count": 9
+   "source": [
+    "for x in \"banana\":\n",
+    "  print(x)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:14.954329Z",
      "start_time": "2024-05-14T06:50:14.944597Z"
     }
    },
-   "source": [
-    "for x in \"12345\":\n",
-    "  print(x)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -236,20 +233,20 @@
      ]
     }
    ],
-   "execution_count": 10
+   "source": [
+    "for x in \"12345\":\n",
+    "  print(x)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:15.117134Z",
      "start_time": "2024-05-14T06:50:15.113203Z"
     }
    },
-   "source": [
-    "a = \"Hello, World!\"\n",
-    "print(len(a))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -259,33 +256,34 @@
      ]
     }
    ],
-   "execution_count": 11
+   "source": [
+    "a = \"Hello, World!\"\n",
+    "print(len(a))"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:15.162558Z",
      "start_time": "2024-05-14T06:50:15.158882Z"
     }
    },
+   "outputs": [],
    "source": [
     "a = '12345'"
-   ],
-   "outputs": [],
-   "execution_count": 12
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:15.418654Z",
      "start_time": "2024-05-14T06:50:15.410873Z"
     }
    },
-   "source": [
-    "print(len(a))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -295,20 +293,19 @@
      ]
     }
    ],
-   "execution_count": 13
+   "source": [
+    "print(len(a))"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:15.519438Z",
      "start_time": "2024-05-14T06:50:15.514197Z"
     }
    },
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "print(\"free\" in txt)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -318,21 +315,20 @@
      ]
     }
    ],
-   "execution_count": 14
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "print(\"free\" in txt)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:15.773753Z",
      "start_time": "2024-05-14T06:50:15.768302Z"
     }
    },
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "if \"free\" in txt:\n",
-    "  print(\"Yes, 'free' is present.\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -342,20 +338,21 @@
      ]
     }
    ],
-   "execution_count": 15
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "if \"free\" in txt:\n",
+    "  print(\"Yes, 'free' is present.\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:16.237067Z",
      "start_time": "2024-05-14T06:50:16.228602Z"
     }
    },
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "print(\"expensive\" not in txt)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -365,21 +362,20 @@
      ]
     }
    ],
-   "execution_count": 16
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "print(\"expensive\" not in txt)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:16.927057Z",
      "start_time": "2024-05-14T06:50:16.921531Z"
     }
    },
-   "source": [
-    "txt = \"The best things in life are free!\"\n",
-    "if \"expensive\" not in txt:\n",
-    "  print(\"No, 'expensive' is NOT present.\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -389,7 +385,11 @@
      ]
     }
    ],
-   "execution_count": 17
+   "source": [
+    "txt = \"The best things in life are free!\"\n",
+    "if \"expensive\" not in txt:\n",
+    "  print(\"No, 'expensive' is NOT present.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -400,16 +400,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:17.295856Z",
      "start_time": "2024-05-14T06:50:17.289398Z"
     }
    },
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[2:5])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -419,19 +416,20 @@
      ]
     }
    ],
-   "execution_count": 18
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[2:5])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:17.864172Z",
      "start_time": "2024-05-14T06:50:17.858163Z"
     }
    },
-   "source": [
-    "print(b[2:3])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -441,20 +439,19 @@
      ]
     }
    ],
-   "execution_count": 19
+   "source": [
+    "print(b[2:3])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:18.160008Z",
      "start_time": "2024-05-14T06:50:18.152733Z"
     }
    },
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[:5])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -464,19 +461,20 @@
      ]
     }
    ],
-   "execution_count": 20
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[:5])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:18.224258Z",
      "start_time": "2024-05-14T06:50:18.218575Z"
     }
    },
-   "source": [
-    "print(b[5:])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -486,20 +484,19 @@
      ]
     }
    ],
-   "execution_count": 21
+   "source": [
+    "print(b[5:])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:18.304262Z",
      "start_time": "2024-05-14T06:50:18.292542Z"
     }
    },
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[2:])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -509,20 +506,20 @@
      ]
     }
    ],
-   "execution_count": 22
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[2:])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:18.323344Z",
      "start_time": "2024-05-14T06:50:18.308281Z"
     }
    },
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[-5:-2])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -532,19 +529,20 @@
      ]
     }
    ],
-   "execution_count": 23
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[-5:-2])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:18.347300Z",
      "start_time": "2024-05-14T06:50:18.327428Z"
     }
    },
-   "source": [
-    "print(b[-3:-1])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -554,20 +552,19 @@
      ]
     }
    ],
-   "execution_count": 24
+   "source": [
+    "print(b[-3:-1])"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-14T06:50:18.397581Z",
      "start_time": "2024-05-14T06:50:18.388717Z"
     }
    },
-   "source": [
-    "b = \"Hello, World!\"\n",
-    "print(b[-5:-2])"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -577,7 +574,102 @@
      ]
     }
    ],
-   "execution_count": 25
+   "source": [
+    "b = \"Hello, World!\"\n",
+    "print(b[-5:-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', ' World!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Hello, World!\"\n",
+    "print(a.split(\",\")) # returns ['Hello', ' World!']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Hello, World!\"\n",
+    "print(a.replace(\"H\", \"J\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Tamim', 'Ahasan']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Tamim,Ahasan\"\n",
+    "print(name.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bmim,Ahasan\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Tamim,Ahasan\"\n",
+    "print(name.replace(\"Ta\",\"B\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Hello\"\n",
+    "name1 = \"World\"\n",
+    "c = name + \" \" + name1\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
@@ -596,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
