--- a/exercise/PythonStrings.ipynb
+++ b/exercise/PythonStrings.ipynb
@@ -670,6 +670,24 @@
     "c = name + \" \" + name1\n",
     "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloHelloHello\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Hello\"\n",
+    "print(name*3)"
+   ]
   }
  ],
  "metadata": {
