--- a/exercise/PythonStrings.ipynb
+++ b/exercise/PythonStrings.ipynb
@@ -688,6 +688,28 @@
     "name = \"Hello\"\n",
     "print(name*3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "sum = a + b\n",
+    "\n",
+    "print(sum)"
+   ]
   }
  ],
  "metadata": {
