--- a/exercise/PythonStrings.ipynb
+++ b/exercise/PythonStrings.ipynb
@@ -710,6 +710,25 @@
     "\n",
     "print(sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Tamim and I am 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Tamim\"\n",
+    "age = 24\n",
+    "print(\"My name is \" + name + \" and I am \" + str(age))"
+   ]
   }
  ],
  "metadata": {
